// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render avatar with color information 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(200,84%,37%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(200,84%,44%,0.09);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(200,84%,44%,0.09);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(200,84%,44%,0.09);
  border-color: hsla(200,84%,44%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(200,84%,44%,0.18);
  border-color: hsla(200,84%,44%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(200,84%,44%,0.18);
  border-color: hsla(200,84%,44%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(200,84%,44%,0.18);
  border-color: hsla(200,84%,44%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color negative 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(4,74%,49%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(4,74%,49%,0.09);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(4,74%,49%,0.09);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(4,74%,49%,0.09);
  border-color: hsla(4,74%,49%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(4,74%,49%,0.18);
  border-color: hsla(4,74%,49%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(4,74%,49%,0.18);
  border-color: hsla(4,74%,49%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(4,74%,49%,0.18);
  border-color: hsla(4,74%,49%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color neutral 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color notice 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(25,85%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(25,90%,48%,0.09);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(25,90%,48%,0.09);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(25,90%,48%,0.09);
  border-color: hsla(25,90%,48%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(25,90%,48%,0.18);
  border-color: hsla(25,90%,48%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(25,90%,48%,0.18);
  border-color: hsla(25,90%,48%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(25,90%,48%,0.18);
  border-color: hsla(25,90%,48%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color positive 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(150,100%,27%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(150,100%,32%,0.09);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(150,100%,32%,0.09);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(150,100%,32%,0.09);
  border-color: hsla(150,100%,32%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(150,100%,32%,0.18);
  border-color: hsla(150,100%,32%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(150,100%,32%,0.18);
  border-color: hsla(150,100%,32%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(150,100%,32%,0.18);
  border-color: hsla(150,100%,32%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with color primary 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(227,100%,59%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(227,100%,59%,0.09);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(227,100%,59%,0.09);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(227,100%,59%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(227,100%,59%,0.09);
  border-color: hsla(227,100%,59%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(227,100%,59%,0.09);
  border-color: hsla(227,100%,59%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(227,100%,59%,0.09);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with dropdown 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
  position: relative;
}

.c1.c1.c1.c1.c1 {
  background-color: hsla(0,0%,100%,1);
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c7.c7.c7.c7.c7 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c2.c2.c2.c2.c2 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c2.c2.c2.c2.c2 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c2.c2.c2.c2.c2 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c2.c2.c2.c2.c2 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c3.c3.c3.c3.c3 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c3.c3.c3.c3.c3:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c3.c3.c3.c3.c3:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c3.c3.c3.c3.c3:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c3.c3.c3.c3.c3 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c6.c6.c6.c6.c6 {
  opacity: 1;
}

<div>
  <div
    class=""
    data-blade-component="dropdown"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1 c2"
        data-blade-component="avatar"
      >
        <button
          aria-controls="dropdown-1-actionlist"
          aria-expanded="false"
          aria-haspopup="menu"
          class="c3"
          data-blade-component="button"
          role="button"
          type="button"
        >
          <div
            class=" c4"
            data-blade-component="base-box"
          >
            <div
              class="c5 c6"
              data-blade-component="base-box"
            >
              <div
                class="c7"
                data-blade-component="base-text"
              >
                NK
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with icon 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  height: 28px;
  width: 28px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="8px"
              viewBox="0 0 24 24"
              width="8px"
            >
              <path
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
              <path
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size large 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 48px;
  height: 48px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 48px;
  height: 48px;
  width: 48px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 48px;
  width: 48px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size medium 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 36px;
  height: 36px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 36px;
  height: 36px;
  width: 36px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 36px;
  width: 36px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size small 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 28px;
  height: 28px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 28px;
  height: 28px;
  width: 28px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 28px;
  width: 28px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size xlarge 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 56px;
  height: 56px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 56px;
  height: 56px;
  width: 56px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 56px;
  width: 56px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render avatar with size xsmall 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render default avatar 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 9999px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 9999px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 9999px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  height: 28px;
  width: 28px;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
            >
              <path
                d="M0.928589 11.3881C1.55965 8.94407 3.72749 7.14289 6.3048 7.14289H7.69523C10.2725 7.14289 12.4404 8.94407 13.0714 11.3881C11.505 12.96 9.36258 13.9286 7.00002 13.9286C4.63745 13.9286 2.49507 12.96 0.928589 11.3881Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
              <path
                d="M4.21915 3.21432C4.21915 1.63637 5.46417 0.357178 7.00002 0.357178C8.53587 0.357178 9.78088 1.63637 9.78088 3.21432C9.78088 4.79228 8.53587 6.07146 7.00002 6.07146C5.46417 6.07146 4.21915 4.79228 4.21915 3.21432Z"
                data-blade-component="svg-path"
                fill="hsla(211, 33%, 21%, 1)"
              />
            </svg>
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<Avatar /> should render square variant of avatar 1`] = `
.c0.c0.c0.c0.c0 {
  background-color: hsla(0,0%,100%,1);
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,33%,21%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.6875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  width: 20px;
  height: 20px;
  border-radius: 4px;
}

.c1.c1.c1.c1.c1 div[data-blade-component="base-text"] {
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.875rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 button[role="button"] {
  min-height: 20px;
  height: 20px;
  width: 20px;
  border-width: 0.5px;
  border-radius: 4px;
  border-color: hsla(214,28%,84%,1);
  outline: none;
  background-color: hsla(211,20%,52%,0.18);
  -webkit-transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
  transition: border-color 150 cubic-bezier(0.3,0,0.2,1),outline 150 cubic-bezier(0.3,0,0.2,1);
}

.c1.c1.c1.c1.c1 button[role="button"] img {
  display: block;
  height: 20px;
  width: 20px;
  border-radius: 4px;
  object-fit: cover;
}

.c1.c1.c1.c1.c1 button[role="button"]:hover {
  outline: 1.5px solid hsla(211,20%,52%,0.18);
  border: hsla(211,20%,52%,0.18);
  background-color: hsla(211,20%,52%,0.18);
}

.c2.c2.c2.c2.c2 {
  min-height: 28px;
  width: auto;
  cursor: pointer;
  background-color: hsla(211,20%,52%,0.18);
  border-color: hsla(211,20%,52%,1);
  border-width: 1px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 8px;
  padding-right: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c2.c2.c2.c2.c2:hover {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:active {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
}

.c2.c2.c2.c2.c2:focus-visible {
  background-color: hsla(211,20%,52%,0.32);
  border-color: hsla(211,20%,52%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c2.c2.c2.c2.c2 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c3.c3.c3.c3.c3 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 150px;
  transition-timing-function: 150px;
}

.c5.c5.c5.c5.c5 {
  opacity: 1;
}

<div>
  <div
    class="c0 c1"
    data-blade-component="avatar"
  >
    <button
      class="c2"
      data-blade-component="button"
      role="button"
      type="button"
    >
      <div
        class=" c3"
        data-blade-component="base-box"
      >
        <div
          class="c4 c5"
          data-blade-component="base-box"
        >
          <div
            class="c6"
            data-blade-component="base-text"
          >
            NK
          </div>
        </div>
      </div>
    </button>
  </div>
</div>
`;
